--- a/Exercicios/Modulo 03/ex022/fundo006.html
+++ b/Exercicios/Modulo 03/ex022/fundo006.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
@@ -28,7 +32,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dicta velit autem omnis corrupti reiciendis deserunt, dolorem magnam consectetur nihil quasi voluptatum amet voluptas cum incidunt libero repudiandae porro quos. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, officia debitis. Sint explicabo voluptas perspiciatis nihil et molestias ullam maxime? Quis reiciendis dolorum, ipsam veniam quasi eos nam animi commodi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nihil tenetur reprehenderit provident dolor in, quae ipsam, distinctio, temporibus perspiciatis dignissimos ducimus. Nulla accusantium qui voluptatum quae dolores eius necessitatibus.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dicta velit autem omnis corrupti reiciendis deserunt, dolorem magnam consectetur nihil quasi voluptatum amet voluptas cum incidunt libero repudiandae porro quos. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, officia debitis. Sint explicabo voluptas perspiciatis nihil et molestias ullam maxime? Quis reiciendis dolorum, ipsam veniam quasi eos nam animi commodi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nihil tenetur reprehenderit provident dolor in, quae ipsam, distinctio, temporibus perspiciatis dignissimos ducimus. Nulla accusantium qui voluptatum quae dolores eius necessitatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti reiciendis vero vitae soluta nam ratione? Autem suscipit voluptate rem beatae quaerat reiciendis nisi iste itaque ratione voluptatem, ipsam eius repellat? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo rem, obcaecati ex voluptatibus voluptates aliquid laudantium reprehenderit illum recusandae explicabo autem quibusdam perspiciatis nam neque ducimus consequatur. Nam, temporibus tempore. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit maiores aspernatur placeat error, delectus magni sit aliquid officiis voluptatem itaque reprehenderit, ipsum tempore deserunt aperiam perspiciatis sint obcaecati, non iure. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci quos totam sint, pariatur officiis eos voluptas dicta explicabo tempore, aliquid rerum minima, ipsa aliquam beatae non illum. Placeat, ratione assumenda. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat eveniet ratione dolore reiciendis, inventore quae magni qui earum debitis optio a velit maiores minus, distinctio, cupiditate in laborum ipsa exercitationem. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam doloremque alias dicta eaque animi corrupti iste enim necessitatibus nulla optio quia, beatae earum deleniti voluptate sed tempora tempore reiciendis fugiat.</p>
     </main>
 </body>
 </html>
