--- a/Exercicios/Modulo 03/ex023/tabela006.html
+++ b/Exercicios/Modulo 03/ex023/tabela006.html
@@ -22,7 +22,7 @@
             padding: 10px;
         }
 
-        TR:nth-child(even) {
+        tr:nth-child(even) {
             background-color: rgb(228, 228, 228);
         }
 
